Archive2/e9/cc460456d07316/output
main.cpp:5:3: error: unknown type name 'C'
  C a;
  ^
main.cpp:13:3: error: unknown type name 'C'; did you mean 'A<B>::C'?
  C b;
  ^
  A<B>::C
main.cpp:9:9: note: 'A<B>::C' declared here
  class C { };
        ^
main.cpp:19:5: warning: unused variable 'a' [-Wunused-variable]
  B a; // legal
    ^
main.cpp:17:11: warning: unused parameter 'argc' [-Wunused-parameter]
main (int argc, char *argv[])
          ^
main.cpp:17:23: warning: unused parameter 'argv' [-Wunused-parameter]
main (int argc, char *argv[])
                      ^
3 warnings and 2 errors generated.
